#
# $Id: Makefile.am,v 1.25 2003/10/03 13:46:27 bagder Exp $
#

AUTOMAKE_OPTIONS = foreign no-dependencies

EXTRA_DIST = README curlgtk.c sepheaders.c simple.c postit2.c		\
	     persistant.c ftpget.c Makefile.example			\
	     multithread.c getinmemory.c ftpupload.c httpput.c		\
	     simplessl.c ftpgetresp.c http-post.c post-callback.c	\
	     multi-app.c multi-double.c multi-single.c multi-post.c	\
	     fopen.c simplepost.c makefile.dj curlx.c

all:
	@echo "done"
